--- a/quiz/css/styles.css
+++ b/quiz/css/styles.css
@@ -6,14 +6,54 @@
 }
 
 .question-container {
-  border: 1px solid rgb(172, 98, 98);
+  border: 2px solid #03a9f4;
+  border-radius: 5px;
   padding: 5px;
-  min-width: 500px;
+  min-width: 300px;
+  max-width: 400px;
+  margin: 5px;
 }
 
 .question-header {
   font-weight: bold;
   font-size: 1.2em;
-  color: rgb(0, 0, 0);
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid ivory;
+}
+
+.deactivation {
+  opacity: 0.9;
+}
+
+body {
+  background-color: #01579b;
+  color: #b3e5fc;
+}
+
+input {
+  background-color: #b3e5fc;
+  color: #01579b;
+}
+.scary {
+  margin: 0px;
+  position: relative;
+}
+.second-scare {
+  position: absolute;
+
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: #b3e5fc;
+  color: #eff2f5;
+  opacity: 0.9;
+}
+.sorry {
+  position: absolute;
+  top: 150px;
+  background-color: #eff2f5;
+  height: 300px;
+  color: rgb(33, 53, 168);
+  padding: 20px;
+  font-size: 30px;
 }
