Server being finalized

--- a/quiz/css/styles.css
+++ b/quiz/css/styles.css
@@ -21,7 +21,7 @@
 }
 
 .deactivation {
-  opacity: 0.9;
+  opacity: 0.1;
 }
 
 body {
@@ -46,7 +46,7 @@ input {
   height: 100%;
   background-color: #b3e5fc;
   color: #eff2f5;
-  opacity: 0.9;
+  opacity: 09;
 }
 .sorry {
   position: absolute;
@@ -56,4 +56,9 @@ input {
   color: rgb(33, 53, 168);
   padding: 20px;
   font-size: 30px;
+}
+
+button {
+  background-color: #b3e5fc;
+  color: #01579b;
 }
